# racecar-controllers

marc-examples/: notlar.txt
marc-examples/bangbang/: CMakeLists.txt  package.xml
marc-examples/bangbang/src/: bangbang.cpp
marc-examples/deep_learning/: CMakeLists.txt  package.xml
marc-examples/deep_learning/scripts/: collect_data.py  predict.py
marc-examples/ktrain/: model_trainer.ipynb  model_trainer.py
marc-examples/openCV/: CMakeLists.txt  package.xml
marc-examples/openCV/scripts/: opencv.py
racecar_controllers/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
racecar_controllers/launch/: controllers.launch
racecar_potential_field_controller/: CMakeLists.txt
racecar_potential_field_controller/launch/: node.launch  viz.rviz
racecar_potential_field_controller/src/: controller.cpp
